[tool.poetry]
name = "qsbi-sqlapi"
version = "0.1.1"
description = ""
authors = ["giacinti <philippe@giacinti.com>"]
readme = "README.md"
packages = [{include = "qsbi"}]

[tool.poetry.dependencies]
python = "^3.9"
qsbi-project = {path = "..", develop = true}
qsbi-api = {path = "../qsbi.api", develop = true}
qsbi-crud-sql = {path = "../qsbi.crud.sql", develop = true}
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"
ipython = "^8.5.0"
ipykernel = "^6.16.0"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
